# ai-leads-v2

./: .gitignore  README.md  README_FLASK.md  flask_app.py  main.py  pyproject.toml  run_flask.sh  run_streamlit.sh
app/: app.py  local_settings_sample.py
app/cache/: email_templates.json
app/core/: check_leads.py  check_sources.py  create_gmail_drafts.py  create_sendgrid_emails.py  create_zoho_drafts.py  email_utils.py  expand_search.py  models.py  run_search.py
app/llm/: email_template.py  llm.py  prompts.py
app/utils/: browser.py  cache.py  gcs.py  sendgrid_utils.py  sheet_cache.py  template_cache.py
scripts/: decode_params.py
static/css/: style.css
static/js/: main.js
templates/: base.html  check_leads.html  check_sources.html  configure_templates.html  create_sheet.html  generate_searches.html  index.html  run_search.html  send_emails.html
